# feast-denormalized-tutorial

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  exploration.ipynb  print_features.ipynb  pyproject.toml
src/feature_repo/: __main__.py  feature_store.yaml  fraud_data.py
src/pipeline/: __main__.py  stream_job.py
src/session_generator/: __main__.py  login_attempt.py
